--- a/templates/login.html
+++ b/templates/login.html
@@ -7,23 +7,32 @@
 <body>
 <div class="container">
     <h1>Login</h1>
-    <p>
-        {{ form.email.label }}<br> {{ form.email(size=20) }}
-		{% if form.email.errors %}
-        <ul class="errors">{% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}</ul>
-    {% endif %}
-    </p>
-    <p>
-        {{ form.password.label }} <br> {{ form.password(size=20) }}
-		{% if form.password.errors %}
-        <ul class="errors">{% for error in form.password.errors %}<li>{{ error }}</li>{% endfor %}</ul>
-    {% endif %}
+    <form method="POST" action="{{ url_for('login') }}" novalidate>
+        {{ form.csrf_token }}
+        <p> {{ form.email.label }}<br> {{ form.email(size=20) }}
+            {% if form.email.errors %}
+        <ul class="errors">{% for error in form.email.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        <p>
+        <p> {{ form.password.label }}<br> {{ form.password(size=20) }}
+            {% if form.password.errors %}
+        <ul class="errors">{% for error in form.password.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        <p>
 
-    </p>
-    <p>
-        {{form.submit}}
-        <h1> haris lulla</h1>
-    </p>
+        <p>
+            {{form.submit}}
+        </p>
+    </form>
+
 </div>
 </body>
 </html>
+
+
