--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Secrets</title>
-  </head>
-  <body>
-    <div class="jumbotron">
-      <div class="container">
+</head>
+<body>
+{{ bootstrap.load_css() }}
+<div class="jumbotron">
+    <div class="container">
         <h1>Welcome</h1>
         <p>Are you ready to discover my secret?</p>
         <a class="btn btn-primary btn-lg" href=" {{ url_for('login') }} "
-          >Login</a
-        >
-      </div>
+        >Login</a>
     </div>
-  </body>
+</div>
+</body>
 </html>
