--- a/templates/login.html
+++ b/templates/login.html
@@ -3,33 +3,15 @@
 <html>
 <head>
     <title>Login</title>
+    {{ bootstrap.load_css() }}
+    {% from 'bootstrap4/form.html' import render_form %}
+
 </head>
 <body>
 <div class="container">
     <h1>Login</h1>
-    <form method="POST" action="{{ url_for('login') }}" novalidate>
-        {{ form.csrf_token }}
-        <p> {{ form.email.label }}<br> {{ form.email(size=20) }}
-            {% if form.email.errors %}
-        <ul class="errors">{% for error in form.email.errors %}
-            <li>{{ error }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        <p>
-        <p> {{ form.password.label }}<br> {{ form.password(size=20) }}
-            {% if form.password.errors %}
-        <ul class="errors">{% for error in form.password.errors %}
-            <li>{{ error }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        <p>
 
-        <p>
-            {{form.submit}}
-        </p>
-    </form>
+    {{ render_form(form) }}
 
 </div>
 </body>
